manifests/frontend.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: minimal-ingress
#   namespace: $KUBER_NAMESPACE
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
#     cert-manager.io/cluster-issuer: "letsencrypt"
# spec:
#   tls:
#     - hosts:
#       - "prj-578.neohack2022.codenrock.com"
#       secretName: letsencrypt
#   rules:
#     - host: "prj-578.neohack2022.codenrock.com"
#       http:
#         paths:
#         - path: /
#           pathType: Prefix
#           backend:
#             service:
#               name: frontend-svc
#               port:
#                 number: 80
#         - path: /api
#           pathType: Prefix
#           backend:
#             service:
#               name: backend-svc
#               port:
#                 number: 8080

apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: $KUBER_NAMESPACE
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: frontend-deployment
#   namespace: $KUBER_NAMESPACE
#   labels:
#     app: frontend
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: frontend
#   template:
#     metadata:
#       labels:
#         app: frontend
#     spec:
#       containers:
#       - name: frontend
#         image: $CI_REGISTRY_IMAGE:frontend-$CI_COMMIT_SHORT_SHA
#         ports:
#         - containerPort: 80
#       imagePullSecrets:
#       - name: regcred
