manifests/backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress-api
  namespace: $KUBER_NAMESPACE
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
      - "prj-578.neohack2022.codenrock.com/api"
      secretName: letsencrypt-api
  rules:
    - host: "prj-578.neohack2022.codenrock.com/api"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: backend
              port:
                number: 8080

apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: $KUBER_NAMESPACE
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: $KUBER_NAMESPACE
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: $CI_REGISTRY_IMAGE:backend-$CI_COMMIT_SHORT_SHA
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: regcred
